Update chapter04.md